[FEAT] update research fields

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <h2 class="mb-5">Research</h2>
 
             <p class="mb-5 text-primary">
-                I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric/topological inference (GT)</span>, <span style="color: forestgreen;"> systems biology/genomics (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, and <span style="color: salmon;"> translational medicine/psychiatry (TM) </span>. I also maintain close industrial collaborations with IBM Research and Microsoft Research.
+                I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric/topological inference (GT)</span>, <span style="color: forestgreen;"> systems biology/genomics (SB)</span>, <span style="color: violet;"> speech processing (SP)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> information theory (IT)</span>, and <span style="color: salmon;"> translational medicine/psychiatry (TM) </span>. I also maintain close industrial collaborations with IBM Research and Microsoft Research.
             </p>
 
             <p class="mb-5 text-primary">
@@ -122,7 +122,7 @@
                     <td> my own time </td>
                     <td> mostly single-authored </td>
                     <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p20">[20]</a><a href="#p21">[21]</a><a href="#p23">[23]</a><a href="#p24">[24]</a> </td>
-                    <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: forestgreen;">SB</span>,<span style="color: brown;">HCI</span> </td>
+                    <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: orange;">IT</span>,<span style="color: purple;">GT</span>,<span style="color: forestgreen;">SB</span>,<span style="color: brown;">HCI</span>,<span style="color: violet;">SP</span> </td>
                 </tr>
                 <tr>
                     <td> 2017 </td>
@@ -154,7 +154,7 @@
                     <td> </td>
                     <td> Neuro Theory Center (PI: Qian) </td>
                     <td> <a href="#p10">[10]</a><a href="#p21">[21]</a></td>
-                    <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">BS</span> </td>
+                    <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: orange;">IT</span> </td>
                 </tr>
                 <tr>
                     <td> 2018 </td>
