[FEAT] add table border

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </p>
 
             <p class="mb-5 text-primary">
-            <table align="left" class="mb-5 text-primary">
+            <table align="left" border=1 frame=void rules=rows class="mb-5 text-primary">
                 <tr bgcolor="lightgrey">
                     <th> From </th>
                     <th> To </th>
