[FEAT] change bib

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                   <li>
                     <i class="fa-li fa fa-coffee"></i>
                     website still under construction</li>
-                </ul>
-                </div> -->
+                </ul> -->
             </div>
+        </div>
     </section>
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
         <div class="my-auto">
@@ -222,6 +222,7 @@
                 </tr>
             </table>
             </p>
+        </div>
     </section>
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
@@ -244,8 +245,7 @@
                             <br/>
                             <p style="color:black"> under review </p>
                             [
-                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
-                            arXiv to come ]&nbsp; [
+                            <a href="https://arxiv.org/abs/2005.04544" style="color:#268fd6">arXiv</a> ]&nbsp; [
                             <a href="./bibTex/lin2020unified.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
                             <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
