--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019unsupervised.png" alt="lin2019unsupervised" border="1" style="width:100%">
+                            <img src="./img/publications/lin2019constraining.png" alt="lin2019constraining" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
-                            [21]&nbsp;<b class="text-primary" id="p21"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
+                            [21]&nbsp;<b class="text-primary" id="p21"> Constraining Implicit Space with MDL: Regularity Normalization as Unsupervised Attention &nbsp; </b>
                             <br />
                             <b><span style="color: dimgray;">Baihan Lin</span></b>
                             <br />
@@ -341,11 +341,11 @@
                             <p style="color:black"> under review </p>
                             [
                             <a href="https://arxiv.org/abs/1902.10658" style="color:#268fd6">arXiv</a> ]&nbsp; [
-                            <a href="./bibTex/lin2019unsupervised.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
+                            <a href="./bibTex/lin2019constraining.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
                             <a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism" style="color:#268fd6">code</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                             <div class="abstract">
-                                <p> Inspired by the adaptation phenomenon of neuronal firing, we propose an unsupervised attention mechanism (UAM) which computes the statistical regularity in the implicit space of neural networks under the Minimum Description Length (MDL) principle. Treating the neural network optimization process as a partially observable model selection problem, UAM constrained the implicit space by a normalization factor, the universal code length. We compute this universal code incrementally across neural network layers and demonstrated the flexibility to include data priors such as top-down attention and other oracle information. Empirically, our approach outperforms existing normalization methods in tackling limited, imbalanced and nonstationary input distribution in computer vision and reinforcement learning tasks. Lastly, UAM tracks dependency and critical learning stages across layers and recurrent time steps of deep networks. </p>
+                                <p> Inspired by the adaptation phenomenon of neuronal firing, we propose the regularity normalization (RN) as an unsupervised attention mechanism (UAM) which computes the statistical regularity in the implicit space of neural networks under the Minimum Description Length (MDL) principle. Treating the neural network optimization process as a partially observable model selection problem, UAM constrained the implicit space by a normalization factor, the universal code length. We compute this universal code incrementally across neural network layers and demonstrated the flexibility to include data priors such as top-down attention and other oracle information. Empirically, our approach outperforms existing normalization methods in tackling limited, imbalanced and non-stationary input distribution in computer vision and reinforcement learning tasks. Lastly, UAM tracks dependency and critical learning stages across layers and recurrent time steps of deep networks. </p>
                             </div>
                         </div>
                     </div>
