[FEAT] try square corner

--- a/html/navleft.html
+++ b/html/navleft.html
@@ -26,7 +26,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://www.linkedin.com/in/doerlbh/">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
@@ -34,7 +34,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://github.com/doerlbh">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
@@ -42,7 +42,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://www.instagram.com/doerlbh/">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
@@ -50,7 +50,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://www.facebook.com/doerlbh">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
@@ -58,7 +58,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://scholar.google.com/citations?user=H67KJ4cAAAAJ&hl=en">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
@@ -66,7 +66,7 @@
                 <li class="list-adaptive-item">
                     <a href="https://twitter.com/doerlbh">
                         <span class="fa-stack fa-md">
-                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-square fa-stack-2x"></i>
                             <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                             </span>
                     </a>
