--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="brandcolumn">
                     <a class="navbar-brand js-scroll-trigger" href="#">
                             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="profileimg" src="" alt="">
+                    <img class="img-fluid img-profile rounded-corner mx-auto mb-2" style="border-radius:20%;" id="profileimg" src="" alt="">
                     </span></a>
                 </div>
                 <div class="contactcolumn">
