--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="brandcolumn">
                     <a class="navbar-brand js-scroll-trigger" href="#">
                             <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-corner mx-auto mb-2" style="border-radius:20%;" id="profileimg" src="" alt="">
+                    <img class="img-fluid img-profile rounded-corner mx-auto mb-2" style="border-radius:10%;" id="profileimg" src="" alt="">
                     </span></a>
                 </div>
                 <div class="contactcolumn">
@@ -235,7 +235,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020unified.png" alt="lin2020unified" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2020unified.png" alt="lin2020unified" border="1">
                         </div>
                         <div class="textcolumn">
                             [25]&nbsp;<b class="text-primary" id="p25"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
@@ -259,7 +259,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020speaker.png" alt="lin2020voice" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2020speaker.png" alt="lin2020voice" border="1">
                         </div>
                         <div class="textcolumn">
                             [24]&nbsp;<b class="text-primary" id="p24"> Speaker Diarization as a Fully Online Learning Problem in MiniVox </b>
@@ -285,7 +285,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020voice.gif" alt="lin2020voice" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2020voice.gif" alt="lin2020voice" border="1">
                         </div>
                         <div class="textcolumn">
                             [23]&nbsp;<b class="text-primary" id="p23"> VoiceID on the fly: Real-time Register-free Online-learning Speaker Recognition </b>
@@ -310,7 +310,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1">
                         </div>
                         <div class="textcolumn">
                             [22]&nbsp; <b class="text-primary" id="p22"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
@@ -330,7 +330,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019constraining.png" alt="lin2019constraining" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019constraining.png" alt="lin2019constraining" border="1">
                         </div>
                         <div class="textcolumn">
                             [21]&nbsp;<b class="text-primary" id="p21"> Constraining Implicit Space with MDL: Regularity Normalization as Unsupervised Attention &nbsp; </b>
@@ -358,7 +358,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020keep.gif" alt="lin2020keep" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2020keep.gif" alt="lin2020keep" border="1">
                         </div>
                         <div class="textcolumn">
                             [20]&nbsp;<b class="text-primary" id="p20"> Keep It Real: a Window to Real Reality in Virtual Reality &nbsp; </b>
@@ -382,7 +382,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020astory.gif" alt="lin2020astory" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2020astory.gif" alt="lin2020astory" border="1">
                         </div>
                         <div class="textcolumn">
                             [19]&nbsp;<b class="text-primary" id="p19"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
@@ -412,7 +412,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019reinforce.png" alt="lin2019reinforce" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019reinforce.png" alt="lin2019reinforce" border="1">
                         </div>
                         <div class="textcolumn">
                             [18]&nbsp;<b class="text-primary" id="p18"> Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders &nbsp; </b>
@@ -437,7 +437,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019what.png" alt="lin2019what" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019what.png" alt="lin2019what" border="1">
                         </div>
                         <div class="textcolumn">
                             [17]&nbsp;<b class="text-primary" id="p17"> What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis &nbsp; </b>
@@ -463,7 +463,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/andelin2019lack.png" alt="andelin2019lack" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/andelin2019lack.png" alt="andelin2019lack" border="1">
                         </div>
                         <div class="textcolumn">
                             [16]&nbsp;<b class="text-primary" id="p16"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats &nbsp; </b>
@@ -486,7 +486,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019modeling.png" alt="lin2019modeling" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019modeling.png" alt="lin2019modeling" border="1">
                         </div>
                         <div class="textcolumn">
                             [15] &nbsp; <b class="text-primary" id="p15"> Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models &nbsp; </b>
@@ -510,7 +510,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019visualize.gif" alt="lin2019visualize" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019visualize.gif" alt="lin2019visualize" border="1">
                         </div>
                         <div class="textcolumn">
                             [14]&nbsp; <b class="text-primary" id="p14"> Visualizing Representational Dynamics with Multidimensional Scaling Alignment &nbsp; </b>
@@ -535,7 +535,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019cliques.png" alt="lin2019cliques" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019cliques.png" alt="lin2019cliques" border="1">
                         </div>
                         <div class="textcolumn">
                             [13]&nbsp; <b class="text-primary" id="p13"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation &nbsp; </b>
@@ -561,7 +561,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/chen2019self.png" alt="chen2019self" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/chen2019self.png" alt="chen2019self" border="1">
                         </div>
                         <div class="textcolumn">
                             [12]&nbsp; <b class="text-primary" id="p12"> Self-assembling 2d arrays with de novo protein building blocks &nbsp; </b>
@@ -585,7 +585,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019split.png" alt="lin2019split" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019split.png" alt="lin2019split" border="1">
                         </div>
                         <div class="textcolumn">
                             [11]&nbsp; <b class="text-primary" id="p11"> Split Q Learning: Reinforcement Learning with Two-Stream Rewards &nbsp; </b>
@@ -611,7 +611,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019neural.png" alt="lin2019neural" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2019neural.png" alt="lin2019neural" border="1">
                         </div>
                         <div class="textcolumn">
                             [10]&nbsp; <b class="text-primary" id="p10"> Neural Networks as Model Selection with Incremental MDL Normalization &nbsp; </b>
@@ -642,7 +642,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2018adgtic.png" alt="lin2018adgtic" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2018adgtic.png" alt="lin2018adgtic" border="1">
                         </div>
                         <div class="textcolumn">
                             [9]&nbsp; <b class="text-primary" id="p9"> Adaptive Independence Tests with Geo-Topological Transformation &nbsp; </b>
@@ -667,7 +667,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2018adaptive.jpg" alt="lin2018adaptive" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2018adaptive.jpg" alt="lin2018adaptive" border="1">
                         </div>
                         <div class="textcolumn">
                             [8]&nbsp; <b class="text-primary" id="p8"> Adaptive Representation Selection in Contextual Bandit &nbsp; </b>
@@ -692,7 +692,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2018contextual.png" alt="lin2018contextual" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2018contextual.png" alt="lin2018contextual" border="1">
                         </div>
                         <div class="textcolumn">
                             [7]&nbsp; <b class="text-primary" id="p7"> Contextual Bandit with Adaptive Feature Extraction &nbsp; </b>
@@ -721,7 +721,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/bukkittu2017parkinson.png" alt="bukkittu2017parkinson" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/bukkittu2017parkinson.png" alt="bukkittu2017parkinson" border="1">
                         </div>
                         <div class="textcolumn">
                             [6] &nbsp; <b class="text-primary" id="p6"> Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions &nbsp; </b>
@@ -745,7 +745,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/teng2017dynamic.png" alt="teng2017dynamic" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/teng2017dynamic.png" alt="teng2017dynamic" border="1">
                         </div>
                         <div class="textcolumn">
                             [5] &nbsp; <b class="text-primary" id="p5"> Dynamic Forecasting of Zika Epidemics Using Google Trends &nbsp; </b>
@@ -768,7 +768,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/teng2017model.png" alt="teng2017model" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/teng2017model.png" alt="teng2017model" border="1">
                         </div>
                         <div class="textcolumn">
                             [4] &nbsp; <b class="text-primary" id="p4"> Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions &nbsp; </b>
@@ -790,7 +790,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/teng2017integrative.png" alt="teng2017integrative" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/teng2017integrative.png" alt="teng2017integrative" border="1">
                         </div>
                         <div class="textcolumn">
                             [3] &nbsp; <b class="text-primary" id="p3"> An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death &nbsp; </b>
@@ -816,7 +816,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2016odc.jpg" alt="lin2016odc" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/lin2016odc.jpg" alt="lin2016odc" border="1">
                         </div>
                         <div class="textcolumn">
                             [2] &nbsp; <b class="text-primary" id="p2"> Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity &nbsp; </b>
@@ -846,7 +846,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/teng2015systematic.png" alt="teng2015systematic" border="1" style="width:100%">
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;" src="./img/publications/teng2015systematic.png" alt="teng2015systematic" border="1">
                         </div>
                         <div class="textcolumn">
                             [1] &nbsp; <b class="text-primary" id="p1"> Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak &nbsp; </b>
