--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     </div>
                 </div>
                 <p class="mb-5 text-primary">
-                    I am a Ph.D. candidate pursuing Computational Neuroscience in the <a href="https://ctn.zuckermaninstitute.columbia.edu/"><u>Center for Theoretical Neuroscience</u></a> and <a href="https://zuckermaninstitute.columbia.edu/"><u>Zuckerman Mind Brain Behavior Institute</u></a> at Columbia University.
+                    I am a Ph.D. candidate pursuing Computational Neuroscience in the <a href="https://ctn.zuckermaninstitute.columbia.edu/" style="color:#268fd6">Center for Theoretical Neuroscience</a> and <a href="https://zuckermaninstitute.columbia.edu/" style="color:#268fd6">Zuckerman Mind Brain Behavior Institute</a> at Columbia University.
                     <!-- , with <a href="https://zuckermaninstitute.columbia.edu/nikolaus-kriegeskorte-phd"><u>Prof. Niko Kriegeskorte</u></a> and <a href="https://zuckermaninstitute.columbia.edu/ning-qian-phd"><u>Prof. Ning Qian</u></a>.  -->
                     I develop neuroscience-inspired AI systems and apply ML to understand human brains (Neuro &harr; AI).
                     <!-- I am interested in a variety of stuff ranging from geometric topology and dynamical systems to Bayesian statistics and machine learning, as well as their applications to neuroscience, genomics, and cognitive sciences. Most recently, I am developing neuroscience-inspired AI systems and applying ML to understand human brains (Neuro &harr; AI).  -->
                 </p>
                 <p class="mb-5 text-primary">
-                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin"><u>Columbia Department of Systems Biology</u></a> and <a href="https://amath.washington.edu/people/baihan-lin"><u>UW Department of Applied Mathematics</u></a>.
+                    I graduated from the University of Washington, Seattle (UW), as part of the NIH-funded Computational Neuroscience Training Program, with a B.S. in Applied & Computational Mathematics and a B.A. in Psychology with Honors. I still maintain close collaborations and affliations with <a href="https://systemsbiology.columbia.edu/people/baihan-lin" style="color:#268fd6">Columbia Department of Systems Biology</a> and <a href="https://amath.washington.edu/people/baihan-lin" style="color:#268fd6">UW Department of Applied Mathematics</a>.
                 </p>
                 <p class="mb-5 text-primary">
                     I am into:
@@ -228,7 +228,8 @@
         <div class="my-auto">
             <h2 class="mb-5">Publications</h2>
             <p class="mb-5 text-primary"> <b>25</b> total = <b>12</b> conferences + <b>6</b> journals + <b>7</b> manuscript / arXiv preprints &nbsp;
-                <br /> (click on <b> abstract </b> to learn more) &nbsp; </p>
+                <br />
+                <br /> Feel free to click on <b> abstract </b> to learn more, or [<a class="collapsible-all" style="color:#268fd6">expand all abstracts&nbsp;</a>)] &nbsp; </p>
             <h3> ongoing...</h3>
             <br />
             <ul class="fa-ul mb-0">
