[DBG] fix abstract jquery

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <h2 class="mb-5">Publications</h2>
             <p class="mb-5 text-primary"> <b>25</b> total = <b>12</b> conferences + <b>6</b> journals + <b>7</b> manuscript / arXiv preprints &nbsp;
                 <br />
-                <br /> Feel free to click on <b> abstract </b> to learn more, or [<a class="collapsibleall" id="collapsibleall" style="color:#268fd6">expand all abstracts&nbsp;</a>] &nbsp; </p>
+                <br /> Feel free to click on <b> abstract </b> to learn more, or [<a class="collapsibleall" id="expall" style="color:#268fd6">expand all abstracts&nbsp;</a>] &nbsp; </p>
             <h3> ongoing...</h3>
             <br />
             <ul class="fa-ul mb-0">
