--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <td> 2016 </td>
                     <td> </td>
                     <td> Vision Neuroscience Lab (PI: Olavarria) </td>
-                    <td> <a href="#p2">[2]<a><a href="#p16">[16]</a></td>
+                    <td> <a href="#p2">[2]</a><a href="#p16">[16]</a></td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span> </td>
                 </tr>
                 <tr>
@@ -209,7 +209,7 @@
                     <td> 2017 </td>
                     <td> BIME </td>
                     <td> State Key Lab of Pathogen & Biosecurity </td>
-                    <td> <a href="#p1">[1]</a><a href="#p3">[3]<a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
+                    <td> <a href="#p1">[1]</a><a href="#p3">[3]</a><a href="#p4">[4]</a><a href="#p5">[5]</a></td>
                     <td> <span style="color: forestgreen;">SB</span>,<span style="color: teal;">AM</span>,<span style="color: salmon;">TM</span></td>
                 </tr>
                 <tr>
@@ -877,12 +877,12 @@
                 <br>Although New York is not like Seattle with all the Nature, I try to maintain my hobbies in skateboarding and longbaording (well, kayaking is obviously not gonna happen here easily). Beyond my footsteps, I enjoy traveling to different places (so far only 3 continents reached) - I am planning a roadtrip across Northern Europe some time next year. </p>
             <b class="text-primary"> Despite doing mostly theoretical research in recent days, I love making tangible things: &nbsp; </b>
             <p class="mb-5 text-primary">
-                <br> woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet"><u>modern sofa</u></a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet"><u>process</u></a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
+                <br> woodworking, DIY, electronics and interior design. A recent woodwork project of mine is a <a href="https://www.instagram.com/p/BnnMfQcDjWI/?utm_source=ig_web_button_share_sheet" style="color:#268fd6">modern sofa</a> (<a href="https://www.instagram.com/p/Bno19-ZjVSo/?utm_source=ig_web_button_share_sheet" style="color:#268fd6">process</a>). As another project under development, I am creating tangible representations of high-dimensional interaction data (more details yet to come). </p>
             <b class="text-primary"> Music! &nbsp; </b>
             <p class="mb-5 text-primary">
-                <br> Other than these life bits, I play flute and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/"><u>my cats</u></a> can still bear it. ;) </p>
+                <br> Other than these life bits, I play flute and am currently learning Jazz and guitar, well, at least while my neighbors and <a href="https://www.instagram.com/neptunesnaptime/" style="color:#268fd6">my cats</a> can still bear it. ;) </p>
             <p class="mb-5 text-primary">
-                <br> More bits of life can be found <a href="bits"><u><b>here</b></u></a></p>
+                <br> More bits of life can be found <a href="bits" style="color:#268fd6"><b>here</b></a></p>
         </div>
     </section>
 </div>
