[FEAT] remove unnecessary manual color setting

--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -20,7 +20,7 @@
 
             <b class="text-primary">  by Baihan Lin, Columbia University, Sep 2018 &nbsp; </b>
             <p class="mb-5 text-primary">
-                <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">https://github.com/doerlbh/mentalRL</a>
+                <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/mentalRL">https://github.com/doerlbh/mentalRL</a>
 
                 <br>
                 <br> Joint work with Dr. Guillermo Cecchi (IBM Research), Dr. Djallel Bouneffouf (IBM Research), Dr. Jenna Reinen (IBM Research) and Dr. Irina Rish (Mila, UdeM)
@@ -52,13 +52,13 @@
 
             <p class="mb-5 text-primary">
                 [1] Lin, B., Bouneffouf, D., & Cecchi, G., D., Reinen, J., & Rish, I. (2019). A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry. <em> In Proceedings of the Nineteenth International Conference on Autonomous Agents and Multi-Agent Systems, AAMAS 2020. IFAAMAS Press.</em>
-                <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2020astory.txt" style="color:#268fd6">bibTex</a>]&nbsp;
+                <br> [<a href="https://arxiv.org/abs/1906.11286">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2020astory.txt">bibTex</a>]&nbsp;
             <br>
             <br>[2] Lin, B., Bouneffouf, D., & Cecchi, G. (2019). Split Q learning: reinforcement learning with two-stream rewards. <em> In Proceedings of the 28th International Joint Conference on Artificial Intelligence, IJCAI 2019 (pp. 6448-6449). AAAI Press.</em>
-                <br> [<a href="https://arxiv.org/abs/1906.12350" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019split.txt" style="color:#268fd6">bibTex</a>]&nbsp;
+                <br> [<a href="https://arxiv.org/abs/1906.12350">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019split.txt">bibTex</a>]&nbsp;
             <br>
             <br> [3] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
-            <br> [<a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a>]
+            <br> [<a href="https://arxiv.org/abs/1906.11286">arXiv</a>]
             <br>
             <br> [4] Lin, B. (2019). Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models. <em> 2019 Technology in Psychiatry Summit (TIPS) </em>
             </p>
