--- a/proj/neuralMDL/index.html
+++ b/proj/neuralMDL/index.html
@@ -20,7 +20,7 @@
 
                 <b class="text-primary">  by Baihan Lin, Columbia University, Feb 2019 &nbsp; </b>
                 <p class="mb-5 text-primary">
-                    <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism" style="color:#268fd6">https://github.com/doerlbh/UnsupervisedAttentionMechanism</a>
+                    <br> <b> GitHub code:</b> <a href="https://github.com/doerlbh/UnsupervisedAttentionMechanism">https://github.com/doerlbh/UnsupervisedAttentionMechanism</a>
 
                     <br>
                 </p>
@@ -48,10 +48,10 @@
 
                 <p class="mb-5 text-primary">
                     [1] Lin, B. (2019). Unsupervised Attention Mechanism across Neural Network Layers. <em> arXiv preprint arXiv:1902.10658. </em>
-                    <br> [<a href="https://arxiv.org/abs/1902.10658" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019unsupervised.txt" style="color:#268fd6">bibTex</a>]&nbsp;
+                    <br> [<a href="https://arxiv.org/abs/1902.10658">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019unsupervised.txt">bibTex</a>]&nbsp;
                     <br>
                     <br >[2] Lin, B. (2019). Neural Networks as Model Selection with Incremental MDL Normalization. <em> Human Brain and Artificial Intelligence, (Vol. 1072, pp. 195-209). Springer Nature.</em>
-                    <br> [<a href="https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14" style="color:#268fd6">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019neural.txt" style="color:#268fd6">bibTex</a>]&nbsp;
+                    <br> [<a href="https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019neural.txt">bibTex</a>]&nbsp;
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
