--- a/proj/topology/index.html
+++ b/proj/topology/index.html
@@ -20,7 +20,7 @@
 
                 <b class="text-primary">  by Baihan Lin, Columbia University, Feb 2018 &nbsp; </b>
                 <p class="mb-5 text-primary">
-                    <br> <b> GitHub code for TSA:</b> <a href="https://github.com/doerlbh/scTSA" style="color:#268fd6">https://github.com/doerlbh/scTSA</a>
+                    <br> <b> GitHub code for TSA:</b> <a href="https://github.com/doerlbh/scTSA">https://github.com/doerlbh/scTSA</a>
                     <br> <b> GitHub code for tTDA:</b> (work in progress, to come)
                     <br> <b> GitHub code for iTDA:</b> (work in progress, to come)
 
@@ -51,10 +51,10 @@
 
                 <p class="mb-5 text-primary">
                     [1] Lin, B. (2019). Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. <em> In the 27th Conference on Intelligent Systems for Molecular Biology (ISMB).</em>
-                    <br> [<a href="https://www.researchgate.net/publication/334731177_Cliques_of_single-cell_RNA-seq_profiles_reveal_insights_into_cell_ecology_during_development_and_differentiation" style="color:#268fd6">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019cliques" style="color:#268fd6">bibTex</a>]&nbsp;
+                    <br> [<a href="https://www.researchgate.net/publication/334731177_Cliques_of_single-cell_RNA-seq_profiles_reveal_insights_into_cell_ecology_during_development_and_differentiation">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019cliques">bibTex</a>]&nbsp;
                     <br>
                     <br> [2] Lin, B., Rabadan, R., & Kriegeskorte, N. (2019). What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis. <em> 2019 NeurIPS Workshop on Learning Meaningful Representations of Life (LMRL) </em>
-                    <br> <b> link: </b> <a href="" style="color:#268fd6"></a> to come
+                    <br> <b> link: </b> <a href=""></a> to come
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
