--- a/proj/dynRSA/index.html
+++ b/proj/dynRSA/index.html
@@ -20,7 +20,7 @@
 
                 <b class="text-primary">  by Baihan Lin, Columbia University, Apr 2019 &nbsp; </b>
                 <p class="mb-5 text-primary">
-                    <br> <b> GitHub code:</b> <a href="https://github.com/rsagroup/pyrsa" style="color:#268fd6">https://github.com/rsagroup/pyrsa</a> (work in progress)
+                    <br> <b> GitHub code:</b> <a href="https://github.com/rsagroup/pyrsa">https://github.com/rsagroup/pyrsa</a> (work in progress)
 
                     <br>
                     <br> Joint work with Dr. Nikolaus Kriegeskorte (Columbia), Dr. Marieke Mur (Western), Dr. Tim Kietzmann (Cambridge) and Dr. Andrew Bell (Oxford)
@@ -50,10 +50,10 @@
 
                 <p class="mb-5 text-primary">
                     [1] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <em> In Proceedings of Conference on Cognitive Computational Neuroscience (CCN), (pp. 1030-1033).</em>
-                    <br> [<a href="https://arxiv.org/abs/1906.09264" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019visualize.txt" style="color:#268fd6">bibTex</a>]&nbsp;
+                    <br> [<a href="https://arxiv.org/abs/1906.09264">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019visualize.txt">bibTex</a>]&nbsp;
                     <!-- <br>
                     <br> [2] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
-                    <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">https://arxiv.org/abs/1906.11286</a> -->
+                    <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286">https://arxiv.org/abs/1906.11286</a> -->
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
                 </p>
