[DBG] fix a clash with collapsible

--- a/index.html
+++ b/index.html
@@ -105,16 +105,26 @@
             <p class="mb-5 text-primary">
                 I am very grateful to have mentors and collaborators with whom I have the honor to work on various
                 interesting problems spanning
-                <span style="color: blue;"> neuroscience &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>,
-                <span style="color: red;">machine learning &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>,
-                <span style="color: chocolate;"> computer vision &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>,
-                <span style="color: purple;"> geometric/topological inference &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>,
-                <span style="color: forestgreen;"> systems biology/genomics &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>,
-                <span style="color: violet;"> speech processing &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid violet;">SP</span>,
-                <span style="color: teal;"> applied mathematics &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid teal;">AM</span>,
-                <span style="color: brown;"> human-computer interaction &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span>,
-                <span style="color: orange;"> information theory &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid orange;">IT</span>,
-                and <span style="color: salmon;"> translational medicine/psychiatry &nbsp;</span><span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span>.
+                <span style="color: blue;"> neuroscience (NS)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid blue;">NS</span>,-->
+                <span style="color: red;">machine learning (ML)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid red;">ML</span>,-->
+                <span style="color: chocolate;"> computer vision (CV)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid chocolate;">CV</span>,-->
+                <span style="color: purple;"> geometric/topological inference (GT)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid purple;">GT</span>,-->
+                <span style="color: forestgreen;"> systems biology/genomics (SB)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid forestgreen;">SB</span>,-->
+                <span style="color: violet;"> speech processing (SP)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid violet;">SP</span>,-->
+                <span style="color: teal;"> applied mathematics (AM)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid teal;">AM</span>,-->
+                <span style="color: brown;"> human-computer interaction (HCI)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid brown;">HCI</span>,-->
+                <span style="color: orange;"> information theory (IT)</span>,
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid orange;">IT</span>,-->
+                and <span style="color: salmon;"> translational medicine/psychiatry (TM)</span>.
+<!--                <span style="border-radius:4px;padding:1px;border:2px solid salmon;">TM</span>.-->
                 I also maintain close industrial collaborations with IBM Research and Microsoft Research.
             </p>
 
