[FEAT] round corner for table

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </p>
 
             <p class="mb-5 text-primary">
-            <table align="left" border=1 frame=void rules=rows class="mb-5 text-primary">
+            <table align="left" border=1 frame=void rules=rows style="border-radius:4px 4px 0 0;" class="mb-5 text-primary">
                 <tr bgcolor="lightgrey">
                     <th> From </th>
                     <th> To </th>
