[FEAT] add round corner for table

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
             <p class="mb-5 text-primary">
             <table align="left" border=1 frame=void rules=rows class="mb-5 text-primary">
-                <tr bgcolor="lightgrey" style="padding:2px;border-radius:4px 4px 0 0;">
+                <tr style="padding:2px;border-radius:4px 4px 0 0;background-color:lightgrey;">
                     <th> From </th>
                     <th> To </th>
                     <th> At </th>
