[FEAT] add citation number

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
             <h2 class="mb-5">Publications</h2>
-            <p class="mb-5 text-primary"> <b>25</b> total = <b>12</b> conferences + <b>6</b> journals + <b>7</b> manuscript / arXiv preprints &nbsp;
+            <p class="mb-5 text-primary"> <b>25</b> total = <b>12</b> conferences + <b>6</b> journals + <b>7</b> manuscript / arXiv preprints, with 127 citations. &nbsp;
                 <br />
                 <br /> Feel free to click on <b> abstract </b> to learn more, or [&nbsp;<a style="color:#268fd6;" class="collapsibleall" id="expall">expand all abstracts</a>&nbsp;] &nbsp; </p>
             <h3> ongoing...</h3>
