[DBG] fix bugs in img reference

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <td> now </td>
                     <td> my own time </td>
                     <td> mostly single-authored </td>
-                    <td> <a href="#NNmodelijcai">[C2]</a><a href="#scTSAismb">[E3]</a><a href="#v2r">[C6]</a><a href="#constrainMDL">[P2]</a><a href="#voiceIDdemo">[P5]</a><a href="#miniVox">[P6]</a> </td>
+                    <td> <a href="#miniVox">[P6]</a><a href="#voiceIDdemo">[P5]</a><a href="#constrainMDL">[P2]</a><a href="#v2r">[C6]</a><a href="#NNmodelijcai">[C2]</a><a href="#scTSAismb">[E3]</a> </td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sienna;">HCI</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:plum;">SP</span> </td>
                 </tr>
                 <tr>
@@ -151,7 +151,7 @@
                     <td> now </td>
                     <td> IBM </td>
                     <td> CompNeuro & AI Foundations Groups</td>
-                    <td> <a href="#ABaCoDEicdm">[C1]</a><a href="#SQLijcai">[C3]</a><a href="#modelRL">[E4]</a><a href="#splitQLnips">[E6]</a><a href="#splitQL">[C5]</a><a href="#unifiedRL">[P7]</a> </td>
+                    <td> <a href="#unifiedRL">[P7]</a><a href="#dilemmaRLnips">[P3]</a><a href="#splitQL">[C5]</a><a href="#SQLijcai">[C3]</a><a href="#ABaCoDEicdm">[C1]</a><a href="#splitQLnips">[E6]</a><a href="#modelRL">[E4]</a> </td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span> </td>
                 </tr>
                 <tr>
@@ -175,7 +175,7 @@
                     <td> now </td>
                     <td> </td>
                     <td> Neuro Theory Center (PI: Qian) </td>
-                    <td> <a href="#NNmodelijcai">[C2]</a><a href="#constrainMDL">[P2]</a></td>
+                    <td> <a href="#constrainMDL">[P2]</a><a href="#NNmodelijcai">[C2]</a></td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:orange;">IT</span> </td>
                 </tr>
                 <tr>
@@ -183,7 +183,7 @@
                     <td> 2018 </td>
                     <td> </td>
                     <td> Math Genomics Lab of DSB (PI: Rabadan) </td>
-                    <td> <a href="#scTSAismb">[E3]</a><a href="#scTSAnips">[E5]</a></td>
+                    <td> <a href="#scTSAnips">[E5]</a><a href="#scTSAismb">[E3]</a></td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:tomato;">ML</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:mediumpurple;">GT</span> </td>
                 </tr>
                 <tr>
@@ -223,7 +223,7 @@
                     <td> 2016 </td>
                     <td> </td>
                     <td> Vision Neuroscience Lab (PI: Olavarria) </td>
-                    <td> <a href="#ODCneurofuture">[E1]</a><a href="#patchjcn">[J6]</a></td>
+                    <td> <a href="#patchjcn">[J6]</a><a href="#ODCneurofuture">[E1]</a></td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:steelblue;">NS</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:sandybrown;">CV</span> </td>
                 </tr>
                 <tr>
@@ -231,7 +231,7 @@
                     <td> 2017 </td>
                     <td> BIME </td>
                     <td> State Key Lab of Pathogen & Biosecurity </td>
-                    <td> <a href="#systemEBOV">[J1]</a><a href="#IntegrateZika">[J2]</a><a href="#ModelZika">[J3]</a><a href="#GoogleZika">[J4]</a></td>
+                    <td> <a href="#GoogleZika">[J4]</a><a href="#ModelZika">[J3]</a><a href="#IntegrateZika">[J2]</a><a href="#systemEBOV">[J1]</a></td>
                     <td> <span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:seagreen;">SB</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:skyblue;">AM</span>&nbsp;<span style="border-radius:4px;padding:1px;color:white;font-size:90%;background-color:salmon;">TM</span></td>
                 </tr>
                 <tr>
@@ -249,9 +249,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
             <h2 class="mb-5">Publications</h2>
-            <p class="mb-5 text-primary"> <b>Types: </b> peer-reviewed journals <b>(J)</b>, peer-reviewed conference proceedings <b>(C)</b>, peer-reviewed extended abstracts <b>(E)</b>, arXiv preprints / manuscripts <b>(P)</b>
+            <p class="mb-5 text-primary"> <b>Types: </b> peer-reviewed journals <b>(J)</b>, peer-reviewed conference proceedings <b>(C)</b>, peer-reviewed extended abstracts <b>(E)</b>, arXiv preprints / manuscripts <b>(P)</b>.  &nbsp;
                 <br />
-           <b>25</b> total = <b>6</b> J + <b>6</b> C + <b>6</b> E + <b>7</b> P, with 131 citations. &nbsp;
+                <br /> <b>25</b> total = <b>6</b> J + <b>6</b> C + <b>6</b> E + <b>7</b> P, with 131 citations. &nbsp;
                 <br />
                 <br /> Feel free to click on <b> abstract </b> to learn more, or [&nbsp;<a style="color:#268fd6;" class="collapsibleall" id="expall">expand all abstracts </a>&nbsp;] &nbsp; </p>
             <h3> ongoing...</h3>
@@ -741,7 +741,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img class="rounded-corner" style="width:100%;border-radius:10%;border:2px solid dimgrey;" src="./img/publications/lin2018adaptive.png" alt="lin2018contextual" >
+                            <img class="rounded-corner" style="width:100%;border-radius:10%;border:2px solid dimgrey;" src="./img/publications/lin2018adaptive.jpg" alt="lin2018contextual" >
                         </div>
                         <div class="textcolumn">
                             [C1]&nbsp; <b class="text-primary" id="ABaCoDEicdm"> Contextual Bandit with Adaptive Feature Extraction &nbsp; </b>
