[DBG] fix code reference

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             <p style="color:black"> under review </p>
                             [
                             <a href="https://arxiv.org/abs/1810.02923">arXiv</a> ]&nbsp; [
-                            <a href="./bibTex/lin2018adgtic.txt">bibTex</a> ]&nbsp;
+                            <a href="./bibTex/lin2018adgtic.txt">bibTex</a> ]&nbsp; [
                             <a href="https://github.com/doerlbh/AGTIC">code</a> ]&nbsp; [
                             <a  style="color:#268fd6;" class="collapsible">abstract&nbsp;</a> ]
                             <div class="abstract rounded-corner">
@@ -752,9 +752,8 @@
                             [
                             <a href="https://arxiv.org/abs/1802.00981">arXiv</a> ]&nbsp; [
                             <!--                            <a href="./pdfs/lin2018contextual.pdf">pdf</a> ]&nbsp; [-->
-                            <a href="./bibTex/lin2018contextual.txt">bibTex</a> ]&nbsp;
-                            <!-- [<a href="">code</a>]&nbsp;  -->
-                            [ git to come ]&nbsp; [
+                            <a href="./bibTex/lin2018contextual.txt">bibTex</a> ]&nbsp; [
+                            <a href="https://github.com/doerlbh/ABaCoDE">code</a> ]&nbsp; [
                             <a  style="color:#268fd6;" class="collapsible">abstract&nbsp;</a> ]
                             <div class="abstract rounded-corner">
                                 <p> We consider an online decision making setting known as contextual bandit problem, and propose an approach for improving contextual bandit performance by using an adap- tive feature extraction (representation learning) based on online clustering. Our approach starts with an off-line pre-training on unlabeled history of contexts (which can be exploited by our approach, but not by the standard contextual bandit), followed by an online selection and adaptation of encoders. Specifically, given an input sample (context), the proposed approach selects the most appropriate encoding function to extract a feature vector which becomes an input for a contextual bandit, and updates both the bandit and the encoding function based on the context and on the feedback (reward). Our experiments on a variety of datasets, and both in stationary and non-stationary environments of several kinds demonstrate clear advantages of the proposed adaptive representation learning over the standard contextual bandit based on "raw" input contexts. </p>
@@ -804,7 +803,7 @@
                             <p style="color:black"> PLoS One </p>
                             [
                             <a href="./pdfs/teng2017dynamic.pdf">pdf</a> ]&nbsp; [
-                            <a href="./bibTex/teng2017dynamic.txt">bibTex</a> ]&nbsp; [ git to come ]&nbsp; [
+                            <a href="./bibTex/teng2017dynamic.txt">bibTex</a> ]&nbsp; [
                             <a  style="color:#268fd6;" class="collapsible">abstract&nbsp;</a> ]
                             <div class="abstract rounded-corner">
                                 <p> We developed a dynamic forecasting model for Zika virus (ZIKV), based on real-time online search data from Google Trends (GTs). It was designed to provide Zika virus disease (ZVD) surveillance and detection for Health Departments, and predictive numbers of infection cases, which would allow them sufficient time to implement interventions. In this study, we found a strong correlation between Zika-related GTs and the cumulative numbers of reported cases (confirmed, suspected and total cases; p
